# bugbounty-ctf

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  SKILL.md  conftest.py  install.sh  pyproject.toml
.claude/: README.md
.claude/agents/: recon-agent.md  report-writer.md  validator.md
.claude/commands/: recon.md  report.md  scope.md  validate.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  ingest-writeups.yml  refresh-cve-db.yml
data/: README.md  reference_knowledge.db
references/: aclabs-drtbp-architecture.md  aclabs-platform-patterns.md  aclabs-source-exploitation.md  advanced-escalation.md  ctf_helper.py  curl-executor-webshell.md  docker-privilege-escalation.md  escalate-ctf-walkthrough.md  htb-recon-methodology.md  nginx-ui-backdoor.md  nginx-ui-exploitation.md  nginx-ui-login-encryption.md  payload-library.md  recreating-ctf-labs-locally.md  sqlite-php-sqli-playbook.md  sqlite-sqli-deep-dive.md  suid-sg-docker-escalation.md  suid-webshell-exploitation.md
scripts/: advanced_tests.py  alpine_pty_extract.py  callback_listener.py  hermes-skill-autosync.sh  quick_test.py  refresh_cve_db.py  register_autosync_hook.py  security_engine.py  sync-skill.sh  web_recon.py
src/bugbounty_ctf/: __init__.py  _langflow_support.py  advanced_tests.py  agents.py  alpine_pty_extract.py  api.py  audit_log.py  aws_exploit.py  brain.py  callback_listener.py  crypto.py  embedders.py  engine.py  execenv.py  extractor.py  failures.py  file_ingest.py  flag_hunter.py  forensics.py  hackerone.py  hypothesis.py  ingest.py  kalibox.py  knowledge.py  langflow.py  mail_enum.py  nfs_enum.py  nfs_scan.py  oast.py  observations.py  orchestrator.py  osint.py  patterns.py  playbook.py  post_exploit.py  pwn.py  quick_tests.py  recon.py  reverse.py  rotation.py  (+10 more)
src/bugbounty_ctf/data/: cve_db.json  playbook.json  templates.json
src/bugbounty_ctf/wordlists/: ssrf.txt  xss.txt
templates/: bug-bounty-report.md  exploit_template.py
tests/: conftest.py  test_advanced_tests.py  test_advanced_tests_refactor.py  test_agent_context.py  test_agent_errors.py  test_agents.py  test_audit_log.py  test_auth_persistence.py  test_aws_exploit.py  test_brain.py  test_cors_discovery.py  test_crypto.py  test_defense_scope.py  test_e2e_loop.py  test_embedders.py  test_engine.py  test_engine_logic.py  test_engine_refactor.py  test_execenv.py  test_exploit.py  test_extractor.py  test_failures.py  test_file_ingest.py  test_forensics.py  test_hackerone.py  test_hypothesis.py  test_ingest.py  test_jwt.py  test_kalibox.py  test_kalibox_brain.py  test_knowledge.py  test_langflow.py  test_nfs_mail_enum.py  test_nfs_scan.py  test_oast.py  test_observations.py  test_orchestrator.py  test_osint.py  test_osint_takeover.py  test_pattern_recall.py  (+29 more)
wordlists/: cmdi.txt  idor.txt  nosqli.txt  ssti.txt
